@@ -41,6 +41,7 @@ import org.eclipse.jdt.core.IModuleDescription;
 import org.eclipse.jdt.core.IPackageFragmentRoot;
 import org.eclipse.jdt.core.IProblemRequestor;
 import org.eclipse.jdt.core.JavaCore;
+import org.eclipse.jdt.core.JavaModelException;
 import org.eclipse.jdt.core.WorkingCopyOwner;
 import org.eclipse.jdt.core.dom.AST;
 import org.eclipse.jdt.core.dom.CompilationUnit;
@@ -94,6 +95,16 @@ public class ModuleBuilderTests extends ModifyingResourceTests {
 		deleteProject("P1");
 	}
 	
+	IClasspathAttribute[] moduleAttribute() {
+		return new IClasspathAttribute[] { JavaCore.newClasspathAttribute(IClasspathAttribute.MODULE, "true") };
+	}
+	void addModularProjectEntry(IJavaProject project, IJavaProject depProject) throws JavaModelException {
+		addClasspathEntry(project, JavaCore.newProjectEntry(depProject.getPath(), null, false, moduleAttribute(), false));
+	}
+	void addModularLibraryEntry(IJavaProject project, String libraryPath) throws JavaModelException {
+		addLibraryEntry(project, new Path(libraryPath), null, null, null, null, moduleAttribute(), false);	
+	}
+
 	// Test that the java.base found as a module package fragment root in the project 
 	public void test001() throws CoreException {
 		if (!isJRE9) return;
@@ -1837,8 +1848,8 @@ public class ModuleBuilderTests extends ModifyingResourceTests {
 			deleteProject("com.greetings");
 		}
 	}
-	// Changes to implicit dependencies should be reflected
-	public void test_ModuleSourcePath_implicitdeps2() throws CoreException {
+	// Changes to implicit dependencies should be reflected // FIXME: container JavaCore.MODULE_PATH_CONTAINER_ID is unreliable
+	public void _test_ModuleSourcePath_implicitdeps2() throws CoreException {
 		if (!isJRE9) return;
 		try {
 			String[] sources = new String[] {
@@ -6276,24 +6287,31 @@ public class ModuleBuilderTests extends ModifyingResourceTests {
 	}
 
 	public void testBug526054() throws Exception {
-		if (!isJRE9) return;
+		if (!isJRE9 || isJRE12) return;
 		ClasspathJrt.resetCaches();
 		try {
-			IJavaProject javaProject = createJava9Project("mod1", new String[] {"src"});
+			// jdk.rmic is not be visible to code in an unnamed module, but using requires we can see the module.
+			// only, there's nothing exported from it (which is why JEP 261 hides it from unnamed), so we --add-reads:
+			IClasspathAttribute[] attrs = new IClasspathAttribute[] {
+				JavaCore.newClasspathAttribute(IClasspathAttribute.ADD_EXPORTS, "jdk.rmic/sun.rmi.rmic=mod1")
+			};
+			IJavaProject javaProject = createJava9ProjectWithJREAttributes("mod1", new String[] {"src"}, attrs);
 
 			String srcMod =
-				"@SuppressWarnings(\"removal\")\n" + // javax.xml.ws.annotation is deprecated for removal
 				"module mod1 {\n" + 
 				"	exports com.mod1.pack1;\n" + 
-				"	requires java.xml.ws.annotation;\n" + 
+				"	requires jdk.rmic;\n" + 
 				"}";
 			createFile("/mod1/src/module-info.java", 
 				srcMod);
 			createFolder("/mod1/src/com/mod1/pack1");
 			String srcX =
 				"package com.mod1.pack1;\n" +
-				"@javax.annotation.Generated(\"com.acme.generator.CodeGen\")\n" +
+				"import sun.rmi.rmic.Main;\n" +
 				"public class Dummy {\n" +
+				"	String test() {\n" +
+				"		return Main.getString(\"in\");\n" +
+				"	}\n" +
 				"}";
 			createFile("/mod1/src/com/mod1/pack1/Dummy.java", srcX);
 
@@ -6315,6 +6333,92 @@ public class ModuleBuilderTests extends ModifyingResourceTests {
 			assertNoErrors();
 		} finally {
 			deleteProject("mod1");
+		}
+	}
+
+	public void testBug526054b() throws Exception {
+		if (!isJRE9) return;
+		ClasspathJrt.resetCaches();
+		try {
+			// one project can see jdk.rmic/sun.rmi.rmic
+			IClasspathAttribute[] attrs = new IClasspathAttribute[] {
+				JavaCore.newClasspathAttribute(IClasspathAttribute.ADD_EXPORTS, "jdk.rmic/sun.rmi.rmic=mod1")
+			};
+			createJava9ProjectWithJREAttributes("mod1", new String[] {"src"}, attrs);
+
+			String srcMod1 =
+				"module mod1 {\n" + 
+				"	exports com.mod1.pack1;\n" + 
+				"	requires jdk.rmic;\n" + 
+				"}";
+			createFile("/mod1/src/module-info.java", 
+				srcMod1);
+			createFolder("/mod1/src/com/mod1/pack1");
+			String srcX1 =
+				"package com.mod1.pack1;\n" +
+				"import sun.rmi.rmic.Constants;\n" + // this should never be complained against due to above add-exports.
+				"public class Dummy implements Constants {\n" +
+				"}";
+			createFile("/mod1/src/com/mod1/pack1/Dummy.java", srcX1);
+			
+			// second project cannot see jdk.rmic/sun.rmi.rmic:
+			createJava9Project("mod2", new String[] {"src"});
+
+			String srcMod2 =
+				"module mod2 {\n" + 
+				"	exports com.mod2.pack1;\n" + 
+				"	requires jdk.rmic;\n" + 
+				"}";
+			createFile("/mod2/src/module-info.java", 
+				srcMod2);
+			createFolder("/mod2/src/com/mod2/pack1");
+			String srcX2 =
+				"package com.mod2.pack1;\n" +
+				"import sun.rmi.rmic.Main;\n" +
+				"public class Dummy {\n" +
+				"	String test() {\n" +
+				"		return Main.getString(\"in\");\n" +
+				"	}\n" +
+				"}";
+			createFile("/mod2/src/com/mod2/pack1/Dummy.java", srcX2);
+
+			// check first:
+			this.problemRequestor.initialize(srcX1.toCharArray());
+			getWorkingCopy("/mod1/src/com/mod1/pack1/Dummy.java", srcX1, true);
+			assertProblems("Dummy in mod1 should have no problems",
+					"----------\n" + 
+					"----------\n",
+					this.problemRequestor);
+
+			// check second:
+			this.problemRequestor.initialize(srcX2.toCharArray());
+			getWorkingCopy("/mod2/src/com/mod2/pack1/Dummy.java", srcX2, true);
+			assertProblems("Dummy in mod2 should have problems",
+					"----------\n" + 
+					"1. ERROR in /mod2/src/com/mod2/pack1/Dummy.java (at line 2)\n" + 
+					"	import sun.rmi.rmic.Main;\n" + 
+					"	       ^^^^^^^^^^^^^^^^^\n" + 
+					"The type sun.rmi.rmic.Main is not accessible\n" + 
+					"----------\n" + 
+					"2. ERROR in /mod2/src/com/mod2/pack1/Dummy.java (at line 5)\n" + 
+					"	return Main.getString(\"in\");\n" + 
+					"	       ^^^^\n" + 
+					"Main cannot be resolved\n" + 
+					"----------\n",
+					this.problemRequestor);
+
+			// check both in a combined build
+			getWorkspace().build(IncrementalProjectBuilder.CLEAN_BUILD, null);
+			getWorkspace().build(IncrementalProjectBuilder.FULL_BUILD, null);
+			IMarker[] markers = getWorkspace().getRoot().findMarkers(null, true, IResource.DEPTH_INFINITE);
+			sortMarkers(markers);
+			assertMarkers("Unexpected markers",
+					"The type sun.rmi.rmic.Main is not accessible\n" + 
+					"Main cannot be resolved",
+					markers);
+		} finally {
+			deleteProject("mod1");
+			deleteProject("mod2");
 		}
 	}
 
@@ -6817,7 +6921,7 @@ public class ModuleBuilderTests extends ModifyingResourceTests {
 		}
 	}
 	public void testBug527569c() throws CoreException {
-		if (!isJRE9) return;
+		if (!isJRE9 || isJRE12) return;
 		IJavaProject p1 = createJava9Project("Bug527569", "1.7");
 		Map<String, String> options = new HashMap<>();
 		// Make sure the new options map doesn't reset.
@@ -6868,7 +6972,7 @@ public class ModuleBuilderTests extends ModifyingResourceTests {
 		}
 	}
 	public void testBug527569e() throws CoreException {
-		if (!isJRE9) return;
+		if (!isJRE9 || isJRE12) return;
 		IJavaProject p1 = createJava9Project("Bug527569", "1.8");
 		Map<String, String> options = new HashMap<>();
 		// Make sure the new options map doesn't reset.
@@ -7016,6 +7120,194 @@ public class ModuleBuilderTests extends ModifyingResourceTests {
 			if (project != null)
 				deleteProject(project);
 			JavaCore.setOptions(options);
+		}
+	}
+	// missing linked jar must not cause NPE
+	public void testBug540904() throws CoreException, IOException {
+		if (!isJRE9) return;
+		try {
+			String[] src = new String[] { 
+					"src/test/Test.java",
+					"package test;\n" +
+					"public class Test {\n" +
+					"}"
+			};
+			IJavaProject p2 = setupModuleProject("Bug540904", src, new IClasspathEntry[] {  });
+			IFile file = getFile("/Bug540904/link.jar");
+			file.createLink(new Path("MISSING/missing.jar"), IResource.ALLOW_MISSING_LOCAL, null);
+			addLibraryEntry(p2, file.getFullPath(), false);
+			getWorkspace().build(IncrementalProjectBuilder.FULL_BUILD, null);
+			IMarker[] markers = p2.getProject().findMarkers(null, true, IResource.DEPTH_INFINITE);
+			assertMarkers("Unexpected markers", "", markers);
+		} finally {
+			this.deleteProject("Bug540904");
+		}
+	}
+	public void testBug540788() throws Exception {
+		if (!isJRE9) return;
+		try {
+			// project common:
+			IJavaProject common = createJava9Project("Bug540788.common", new String[] { "src/main/java" });
+			createSourceFiles(common,
+					new String[] {
+						"src/main/java/module-info.java",
+						"module org.sheepy.common {\n" + 
+						"	requires transitive org.eclipse.emf.common;\n" + 
+						"	requires transitive org.eclipse.emf.ecore;\n" + 
+						"}\n"
+					});
+			IFolder libs = createFolder("/Bug540788.common/libs");
+			String emfCommonPath = libs.getLocation()+"/org.eclipse.emf.common.jar";
+			Util.createJar(
+					new String[] {
+							"src/org/eclipse/emf/common/Foo.java",
+							"package org.eclipse.emf.common;\n" +
+							"public interface Foo {\n" +
+							"}",
+					},
+					null,
+					new HashMap<>(),
+					null,
+					emfCommonPath);
+			addModularLibraryEntry(common, emfCommonPath);
+			String ecorePath = libs.getLocation()+"/org.eclipse.emf.ecore.jar";
+			Util.createJar(
+					new String[] {
+						"src/org/eclipse/emf/ecore/EObject.java",
+						"package org.eclipse.emf.ecore;\n" +
+						"public interface EObject {\n" +
+						"}",
+					},
+					null,
+					new HashMap<>(),
+					null,
+					ecorePath);
+			addModularLibraryEntry(common, ecorePath);
+			// project vulkan:
+			IJavaProject vulkan = createJava9Project("Bug540788.vulkan", new String[] { "src/main/java" });
+			createSourceFiles(vulkan,
+					new String[] {
+						"src/main/java/module-info.java",
+						"module org.sheepy.vulkan {\n" + 
+						"	requires transitive org.sheepy.common;\n" + 
+						"	exports org.sheepy.vulkan.model.resource;\n" + 
+						"}\n",
+						"src/main/java/org/sheepy/vulkan/model/resource/Resource.java",
+						"package org.sheepy.vulkan.model.resource;\n" + 
+						"import org.eclipse.emf.ecore.EObject;\n" + 
+						"public interface Resource extends EObject {\n" + 
+						"}\n",
+						"src/main/java/org/sheepy/vulkan/model/resource/VulkanBuffer.java",
+						"package org.sheepy.vulkan.model.resource;\n" + 
+						"public interface VulkanBuffer extends Resource {\n" + 
+						"}\n",
+					});
+			addModularProjectEntry(vulkan, common);
+			addModularLibraryEntry(vulkan, emfCommonPath);
+			addModularLibraryEntry(vulkan, ecorePath);
+			// project vulkan.demo
+			IJavaProject vulkan_demo = createJava9Project("Bug540788.vulkan.demo", new String[] { "src/main/java" });
+			createSourceFiles(vulkan_demo,
+					new String[] {
+						"src/main/java/module-info.java",
+						"module org.sheepy.vulkan.demo {\n" + 
+						"	exports org.sheepy.vulkan.demo.model;\n" + 
+						"	requires org.sheepy.vulkan;\n" + 
+						"}\n",
+						"src/main/java/org/sheepy/vulkan/demo/model/UniformBuffer.java",
+						"package org.sheepy.vulkan.demo.model;\n" + 
+						"import org.sheepy.vulkan.model.resource.VulkanBuffer;\n" + 
+						"public interface UniformBuffer extends VulkanBuffer {\n" + 
+						"}\n",
+					});
+			addModularProjectEntry(vulkan_demo, vulkan);
+			addModularProjectEntry(vulkan_demo, common);
+			addModularLibraryEntry(vulkan_demo, emfCommonPath);
+			addModularLibraryEntry(vulkan_demo, ecorePath);
+			
+			getWorkspace().build(IncrementalProjectBuilder.FULL_BUILD, null);
+			IMarker[] markers = vulkan_demo.getProject().findMarkers(null, true, IResource.DEPTH_INFINITE);
+			assertMarkers("Unexpected markers", "", markers);
+		} finally {
+			deleteProject("Bug540788.common");
+			deleteProject("Bug540788.vulkan");
+			deleteProject("Bug540788.vulkan.demo");
+		}
+	}
+	public void testBug541015() throws Exception {
+		try {
+			IJavaProject m1 = createJava9Project("m1", new String[] { "src" });
+			createSourceFiles(m1,
+					new String[] {
+						"src/module-info.java",
+						"module m1 { exports org.p1; }\n",
+						"src/org/p1/T1.java",
+						"package org.p1;\n" +
+						"public class T1 {}\n"
+					});
+			IJavaProject m2 = createJava9Project("m2", new String[] { "src" });
+			createSourceFiles(m2,
+					new String[] {
+						"src/module-info.java",
+						"module m2 { exports org.p1; }\n",
+						"src/org/p1/T1.java",
+						"package org.p1;\n" +
+						"public class T1 {}\n"
+					});
+			IJavaProject m3 = createJava9Project("m3", new String[] { "src" });
+			createSourceFiles(m3,
+					new String[] {
+						"src/module-info.java",
+						"module m3 { exports org.p1; }\n",
+						"src/org/p1/T1.java",
+						"package org.p1;\n" +
+						"public class T1 {}\n"
+					});
+			IJavaProject unnamed = createJava9Project("unnamed", new String[] { "src" });
+			String testSource = "package test;\n" +
+			"import org.p1.T1;\n" +
+			"public class Test {\n" +
+			"	T1 t1;\n" +
+			"}\n";
+			createSourceFiles(unnamed,
+					new String[] {
+						"src/test/Test.java",
+						testSource
+					});
+			addModularProjectEntry(unnamed, m1);
+			addModularProjectEntry(unnamed, m2);
+			addModularProjectEntry(unnamed, m3);
+			
+			getWorkspace().build(IncrementalProjectBuilder.FULL_BUILD, null);
+			IMarker[] markers = unnamed.getProject().findMarkers(null, true, IResource.DEPTH_INFINITE);
+			sortMarkers(markers);
+			assertMarkers("Unexpected markers",
+					"The import org.p1.T1 cannot be resolved\n" + 
+					"T1 cannot be resolved to a type",
+					markers);
+			
+			char[] sourceChars = testSource.toCharArray();
+			this.problemRequestor.initialize(sourceChars);
+			getCompilationUnit("/unnamed/src/test/Test.java").getWorkingCopy(this.wcOwner, null);
+			assertProblems(
+					"Unexpected problems",
+					"----------\n" + 
+					"1. ERROR in /unnamed/src/test/Test.java (at line 2)\n" + 
+					"	import org.p1.T1;\n" + 
+					"	       ^^^^^^^^^\n" + 
+					"The import org.p1.T1 cannot be resolved\n" + 
+					"----------\n" + 
+					"2. ERROR in /unnamed/src/test/Test.java (at line 4)\n" + 
+					"	T1 t1;\n" + 
+					"	^^\n" + 
+					"T1 cannot be resolved to a type\n" + 
+					"----------\n",
+					this.problemRequestor);
+		} finally {
+			deleteProject("m1");
+			deleteProject("m2");
+			deleteProject("m3");
+			deleteProject("unnamed");
 		}
 	}
 	protected void assertNoErrors() throws CoreException {
